# smarthome

./: .buildinfo  .gitignore  CONTRIBUTING.md  README.md  datenschutz.html  dummy_for_readmes.html  einleitung.html  faq.html  fehlersuche.html  fehlersuche_checkliste.html  genindex.html  ideen_kommendes_release.html  impressum.html  index.html  lib_item_refactoring.md  objects.inv  plugins_all.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  tox.ini  was_ist_neu.html  was_war_neu.html
.githooks/: post-commit  pre-commit  pre-push
.github/workflows/: builddevdoc.yml  buildreleasedoc.yml  codeql.yml  comment_pr_to_wrong_branch.yml  unittests.yml
_modules/: index.html
_modules/lib/: config.html  connection.html  daemon.html  db.html  env.html  item_conversion.html  log.html  logic.html  logutils.html  metadata.html  module.html  network.html  orb.html  plugin.html  scene.html  scheduler.html  shtime.html  shyaml.html  smarthome.html  tools.html  translation.html  utils.html
_modules/modules/: admin.html  http.html  mqtt.html  websocket.html
_sources/: dummy_for_readmes.rst.txt  ideen_kommendes_release.rst.txt  index.rst.txt  was_ist_neu.rst.txt
_sources/admin/: dienste.rst.txt  logs.rst.txt  system.rst.txt
_sources/beispiele/: umzug.rst.txt
_sources/installation/: anforderungen.rst.txt
_sources/konfiguration/: konfiguration_backup_restore.rst.txt  logging.rst.txt  szenen.rst.txt
_sources/plugins_doc/: dummy_all.rst.txt  dummy_gateway.rst.txt  dummy_interface.rst.txt  dummy_system.rst.txt  dummy_unclassified.rst.txt  dummy_web.rst.txt  (+7 more)
_static/: documentation_options.js
admin/: admin.html  dienste.html  items.html  logiken.html  logs.html  plugins.html  scenes.html  scheduler.html  system.html  threads.html
beispiele/: beispiele.html  eval.html  items_tipps_und_tricks.html  knxd.html  structs.html  umzug.html
dev/: README.html  __init__.py
doc/: build_doc.sh  build_doc_local.sh  build_plugin_config_files.py  build_plugin_doc_files.py  build_plugin_rst_files.py  how-to-build-docs.rst  remove_built_files.sh  requirements.txt
entwicklung/: build_doc.html  entwicklung.html  virtual_env.html
etc/: README.md  smarthome.yaml.default
gedankenstuetzen/: admonition_arten.html  knxd_compilieren.html  tabs.html
installation/: anforderungen.html  docker.html  installation.html  update_upgrade.html
konfiguration/: item_structs.html  konfiguration.html  konfiguration_backup_restore.html  konfiguration_ueberblick.html  logging.html  logging_best_practices.html  logiken.html  plugins.html  szenen.html  userfunctions.html
lib/: aioudp.py  backup.py  config.html  config.py  connection.html  constants.html  constants.py  cpuinfo.py  cpuinfo_sh.py  daemon.html  daemon.py  db.html  db.py  env.html  item.html  item_class_item.html  item_class_items.html  item_conversion.html  item_conversion.py  log.html  log.py  logic.html  logic.py  logutils.html  logutils.py  metadata.html  metadata.py  module.html  module.py  network.html  network.py  orb.html  orb.py  orb_old.py  plugin.html  plugin.py  plugin_class_plugins.html  plugin_class_pluginwrapper.html  requirements.txt  scene.html  (+19 more)
logiken/: logics.html
plugins/: README.html
plugins_doc/: dummy_system.html  plugins_all.html  plugins_all_header.html  plugins_footer.html  plugins_gateway.html  plugins_gateway_header.html  plugins_interface.html  plugins_interface_header.html  plugins_protocol.html  plugins_protocol_header.html  plugins_system.html  plugins_system_header.html  plugins_unclassified.html  plugins_unclassified_header.html  plugins_web.html  plugins_web_header.html
referenz/: APIs.html  libraries_plugins_logics.html  netzwerk.html  referenz.html
release/: 1_00_release_sh_py.html  1_01_and_newer.html  1_06.html  1_06_1.html  1_07.html  1_07_1.html  1_07_2.html  1_08.html  1_08_1.html  1_08_2.html  1_09.html  1_09_1.html  1_09_2.html  1_09_3.html  1_09_4.html  1_09_5.html  1_0_release_sh_py.html  1_1.html  1_10.html  1_11_0.html  1_12_0.html  1_12_1.html  1_2.html  1_3.html  1_4.html  1_4_1.html  1_4_2.html  1_5.html  1_5_1.html  1_6.html  1_6_1.html  1_7.html  1_7_1.html  1_7_2.html  1_8.html  1_8_1.html  1_8_2.html  1_9.html  1_9_1.html  1_9_2.html  (+4 more)
requirements/: test.txt
templates/: logic.yaml.default  logic_groups.yaml  smarthome.yaml.default
tests/: common.py  example.yaml  path.py  requirements.txt  run_tests.py  test_admin_error_page_json.py  test_admin_rest.py  test_api_items.py  test_config.py  test_config2.py  test_db.py  test_fail.py  test_item.py  test_item_autotimer.py  test_item_castvalue.py  test_item_create.py  test_item_edit.py  test_item_eval.py  test_item_eval_namespace.py  test_item_fade.py  test_item_helpers.py  test_item_history.py  test_item_hysteresis.py  test_item_items.py  test_item_json.py  test_item_lifecycle.py  test_item_logchange.py  test_item_name_collision.py  test_item_pathresolution.py  test_item_persistence.py  test_item_property.py  test_item_references.py  test_item_rename.py  test_item_rename_rewrite.py  test_item_stackinfo.py  test_item_structs.py  test_item_trigger_condition.py  test_item_triggers.py  test_item_typehandler.py  test_items_remove_references.py  (+21 more)
tools/: act  backup_restore.py  build_requirements.py  build_test_requirements.py  check_plugin.py  check_pyright.py  conf_to_yaml_converter.py  cpuusage.py  fetch_skyfield_data.py  install-hooks.sh  make_venv  measure_cpu_speed.py  plugin_metadata_checker.py  postinstall  pyright_stub_audit.py  setpermissions  tools.html  tools_backup_restore.html  tools_build_requirements.html  tools_conf_to_yaml_converter.html  tools_getshngpid.html  tools_install_hooks.html  tools_plugin_metadata_checker.html
visualisierung/: automatic_generation.html  beispiel.html  changes_in_1.8.html  deprecated_widgets.html  features.html  install_widgets.html  item_attributes.html  multiple_subtrees.html  navigation_structure.html  plugin_widgets.html  reverse_proxy.html  top_navigation.html  visualisierung.html  websocket_communication.html
vorlagen/: 1_x_vorlage_Release_Notes.html
(+1684 files in other folders)
